@@ -41,6 +41,7 @@ Bugs fixed:
  - Crash possible when AI civ is left alive with only a settler on a transport (called the "houseboat bug")
  - Resources beyond the first 32 share access records in cities not on the main trade network (called the "phantom resource bug")
  - Air units lose a turn after being set to intercept
+ - Cached building maintenance amounts not updated when buildings are obsoleted
 Engine extensions:
  - Adjustable minimum city distance
  - Option to limit railroad movement
