@@ -303,6 +303,8 @@ inlead,	   0x437F80,	0x0,		0x0,		"Leader_could_buy_tech_on_trade_screen",	"byte 
 inlead,	   0x4C10B0,	0x0,		0x0,		"City_get_building_defense_bonus",		"int (__fastcall *) (City * this)"
 define,	   0x55A8D0,	0x0,		0x0,		"Leader_count_wonders_with_flag",		"int (__fastcall *) (Leader * this, int edx, enum ImprovementTypeWonderFeatures flag, City * only_in_city)"
 repl vptr, 0x66DD04,	0x68ADE4,	0x66DD04,	"Unit_eval_escort_requirement",			"int (__fastcall *) (Unit * this)"
+inlead,	   0x561860,	0x56D9E0,	0x561810,	"Leader_unlock_technology",			"void (__fastcall *) (Leader * this, int edx, int tech_id, byte param_2, byte param_3, byte param_4)"
+define,	   0x55CF10,	0x568F90,	0x55CEC0,	"Leader_recompute_buildings_maintenance",     	"void (__fastcall *) (Leader *this)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
