@@ -107,6 +107,7 @@ patch_disembark_immobile_bug = true
 patch_houseboat_bug = true
 patch_intercept_lost_turn_bug = true
 patch_phantom_resource_bug = true
+patch_maintenance_persisting_for_obsolete_buildings = true
 
 [=========================]
 [=== ENGINE EXTENSIONS ===]
